修改微课详情，历史记录，单个节次详情界面样式和取消自动播放

--- a/JiaoBaoYun-hb/html/micro-course/course_details.html
+++ b/JiaoBaoYun-hb/html/micro-course/course_details.html
@@ -22,9 +22,13 @@
 
 			.mui-table-view:before,
 			.mui-table-view:after,
-			.section-top .mui-table-view-cell:after,
-			.section-comment .mui-table-view-cell:after {
+			.section-top .mui-table-view-cell:after {
 				height: 0px;
+			}
+
+			.section-comment .mui-table-view-cell:after {
+				left: 10px;
+				right: 10px;
 			}
 
 			.mui-table-view-cell.mui-collapse.mui-active {
@@ -66,7 +70,8 @@
 				/*顶部节次描述的内容*/
 				margin: 0px;
 				padding: 11px 15px;
-				padding-top: 0px;font-size: 14px;
+				padding-top: 0px;
+				font-size: 14px;
 				color: #808080 !important;
 			}
 
@@ -105,6 +110,7 @@
 			.section-list .section-title {
 				/*节次列表标题*/
 				margin-bottom: 11px;
+				margin-right: 18px;
 			}
 
 			.section-list .mui-table-view-cell {
@@ -136,6 +142,10 @@
 				color: #dbdbdb;
 			}
 
+			.section-top .icon-zanzan1 {
+				font-size: 16px;
+			}
+
 			.section-more {
 				/*查看更多*/
 				display: none;
@@ -145,7 +155,7 @@
 			}
 
 			.section-more .mui-icon-arrowdown {
-				font-size: 14px;
+				font-size: 22px;
 			}
 
 			.section-list-li {
@@ -395,6 +405,11 @@
 				-o-background-size: cover;
 				background-size: cover;
 			}
+
+			.icon-gerenziliao {
+				font-size: 18px !important;
+				margin-top: 1px;
+			}
 		</style>
 	</head>
 
@@ -433,7 +448,7 @@
 				<audio id="audio"></audio>
 			</div>
 			<div id="video_area" class="video-area">
-				<video id="video" controls="controls" preload="none" poster="null" autoplay="autoplay">
+				<video id="video" controls="controls" preload="none" poster="null">
 					您的浏览器不支持video标签
 				</video>
 			</div>
@@ -553,7 +568,7 @@
 					console.log("audio-oncanplaythrough " + audioState);
 					if(audioState == 4) {
 						audioState = 0;
-						audio.play();
+						//audio.play();
 					}
 				}
 
@@ -1136,8 +1151,7 @@
 				for(var i in ids) {
 					var ele = document.getElementById(ids[i]);
 					ele.removeAttribute("repeatCount");
-					ele.removeAttribute("dur");
-
+					//					ele.removeAttribute("dur");
 				}
 				audio_svg.unpauseAnimations();
 				audioState = 4;
@@ -1164,7 +1178,6 @@
 					document.getElementById("section_top_title").style.marginRight = "15px";
 					document.getElementById("audio_svg_time").innerHTML = courseDetails.getAudioTime(time);
 					audio.src = fpath;
-					audio.load();
 				} else {
 					document.getElementById("scroll_wrapper").style.top = "45px";
 					document.getElementById("video_area").style.display = "none";
