修改节次音视频播放逻辑

--- a/JiaoBaoYun-hb/html/micro-course/course_details.html
+++ b/JiaoBaoYun-hb/html/micro-course/course_details.html
@@ -568,7 +568,7 @@
 					console.log("audio-oncanplaythrough " + audioState);
 					if(audioState == 4) {
 						audioState = 0;
-						//audio.play();
+						audio.play();
 					}
 				}
 
