--- a/JiaoBaoYun-hb/html/micro-course/course_section.html
+++ b/JiaoBaoYun-hb/html/micro-course/course_section.html
@@ -549,7 +549,7 @@
 					console.log("audio-oncanplaythrough " + audioState);
 					if(audioState == 4) {
 						audioState = 0;
-						//audio.play();
+						audio.play();
 					}
 				}
 
