--- a/JiaoBaoYun-hb/html/index/firstPage.html
+++ b/JiaoBaoYun-hb/html/index/firstPage.html
@@ -22,6 +22,28 @@
 				statusBarBackground: '#13b7f6'
 			});
 			mui.plusReady(function() {
+				//获取APP的_documents文件夹对象,并清理文件
+				plus.io.resolveLocalFileSystemURL("_documents/", function(docEntry) {
+					console.log("获取_documents文件操作对象成功 " + docEntry.fullPath);
+					var directoryReader = docEntry.createReader();
+					directoryReader.readEntries(function(allEntry) {
+						for(var i in allEntry) {
+							console.log("Reader " + i + " " + allEntry[i].isFile + " " + allEntry[i].fullPath);
+							if(allEntry[i].isFile) { //清除文件
+								allEntry[i].remove(function(remSucCB) {
+									console.log("删除文件成功 " + remSucCB);
+								}, function(remErrorCB) {
+									console.log("删除文件失败" + JSON.stringify(remErrorCB));
+								});
+							}
+						}
+					}, function(allEntryErrorCB) {
+						console.log("读取_documents文件夹失败" + JSON.stringify(docEntryErrorCB));
+					});
+				}, function(docEntryErrorCB) {
+					console.log("获取_documents文件夹失败" + JSON.stringify(docEntryErrorCB));
+				});
+
 				//如果之前登录成功，则重新获取token，获取个人信息，则为登录成功
 				var personal = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
 				console.log('person===' + JSON.stringify(personal));
