--- a/JiaoBaoYun-hb/html/micro-course/course_details.html
+++ b/JiaoBaoYun-hb/html/micro-course/course_details.html
@@ -18,6 +18,7 @@
 			.mui-content {
 				word-wrap: break-word;
 				background-color: white;
+				font-family: inherit !important;
 			}
 
 			.mui-table-view:before,
@@ -142,12 +143,8 @@
 			}
 
 			.icon-zanzan1 {
-				font-size: 13px;
-				color: #dbdbdb;
-			}
-
-			.section-top .icon-zanzan1 {
 				font-size: 16px;
+				color: #dbdbdb;
 			}
 
 			.section-more {
@@ -419,7 +416,7 @@
 
 			.icon-gerenziliao {
 				font-size: 18px !important;
-				margin-top: 1px;
+				margin-top: 2px;
 			}
 		</style>
 	</head>
@@ -871,16 +868,15 @@
 						} else {
 							document.getElementById("section_more").style.display = "block";
 						}
+						if(sectionId == undefined) {
+							mui.toast("没有节次");
+							document.getElementById("bar_tab").style.display = "none";
+						} else {
+							document.getElementById("bar_tab").style.display = "block";
+						}
 					} else {
 						wd.close();
 						mui.toast(data.RspTxt);
-					}
-					if(sectionId == undefined) {
-						mui.toast("没有节次");
-						document.getElementById("bar_tab").style.display = "none";
-					} else {
-						document.getElementById("bar_tab").style.display = "block";
-
 					}
 				});
 			}
@@ -1212,14 +1208,15 @@
 				//重置视频区域
 				video.src = "";
 				video.style.backgroundImage = "";
+				var collapse_content_show = document.getElementById("collapse_content_show");
 				if(type == 1) { //视频
 					document.getElementById("scroll_wrapper").style.top = 44 + parseInt(plus.screen.resolutionWidth * 162 / 360) + "px";
 					document.getElementById("video_area").style.display = "inline";
 					document.getElementById("audio_area").style.display = "none";
 					show = false;
 					document.getElementById("collapse_content_li").className = "mui-table-view-cell mui-collapse";
-					document.getElementById("collapse_content_show").style.display = 'block';
-					document.getElementById("section_top_title").style.marginRight = "15px";
+					collapse_content_show.style.display = 'block';
+					document.getElementById("section_top_title").style.marginRight = collapse_content_show.offsetWidth + 6 + "px";
 					video.src = fpath;
 					video.style.backgroundImage = "url(" + thumb + ")";
 				} else if(type == 2) { //音频
@@ -1228,15 +1225,15 @@
 					document.getElementById("audio_area").style.display = "inline";
 					show = false;
 					document.getElementById("collapse_content_li").className = "mui-table-view-cell mui-collapse";
-					document.getElementById("collapse_content_show").style.display = 'block';
-					document.getElementById("section_top_title").style.marginRight = "15px";
+					collapse_content_show.style.display = 'block';
+					document.getElementById("section_top_title").style.marginRight = collapse_content_show.offsetWidth + 6 + "px";
 					document.getElementById("audio_svg_time").innerHTML = courseDetails.getAudioTime(time);
 					audio.src = fpath;
 				} else {
 					document.getElementById("scroll_wrapper").style.top = "45px";
 					document.getElementById("video_area").style.display = "none";
 					document.getElementById("audio_area").style.display = "none";
-					document.getElementById("collapse_content_show").style.display = 'none';
+					collapse_content_show.style.display = 'none';
 					show = true;
 					document.getElementById("collapse_content_li").className = "mui-table-view-cell mui-collapse mui-active";
 					document.getElementById("section_top_title").style.marginRight = "0px";
