修改微课查看更多的样式

--- a/JiaoBaoYun-hb/html/micro-course/course_section.html
+++ b/JiaoBaoYun-hb/html/micro-course/course_section.html
@@ -18,6 +18,7 @@
 			.mui-content {
 				word-wrap: break-word;
 				background-color: white;
+				font-family: inherit !important;
 			}
 
 			.mui-table-view:before,
