--- a/JiaoBaoYun-hb/html/micro-course/course_details.html
+++ b/JiaoBaoYun-hb/html/micro-course/course_details.html
@@ -155,8 +155,17 @@
 				font-size: 14px;
 			}
 
+			.section-more-text {
+				display: inline-block;
+				padding-right: 22px;
+				padding-top: 1px;
+			}
+
 			.section-more .mui-icon-arrowdown {
-				font-size: 22px;
+				font-size: 20px;
+				position: absolute;
+				margin-left: -22px;
+				top: 8px;
 			}
 
 			.section-list-li {
@@ -485,7 +494,7 @@
 					</ul>
 					<ul id="section_list" class="mui-table-view section-list">
 						<li id="section_more" class="mui-table-view-cell section-more">
-							查看更多
+							<div class="section-more-text">查看更多</div>
 							<div class="mui-icon mui-icon-arrowdown"></div>
 						</li>
 					</ul>
