--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -43,11 +43,11 @@
 			</a>
 			<a id="bottom-show" class="mui-tab-item" href="../show/show-home1.html">
 				<span class="mui-icon iconfont icon-dongtai"></span>
-				<span class="mui-tab-label">展现</span>
+				<span class="mui-tab-label">发现</span>
 			</a>
 			<a class="mui-tab-item" href="../micro-course/course-home1.html">
 				<span class="mui-icon iconfont icon-class"></span>
-				<span class="mui-tab-label">微课</span>
+				<span class="mui-tab-label">微学</span>
 			</a>
 		</nav>
 	</body>
