--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -18,64 +18,64 @@
 	<body>
 		<div class="mui-content">
 			<!--<div class="mui-scroll">-->
-				<div id="title" class="title">
-					<img id="uimg" style="height: 60px;width: 60px;" src="../../image/utils/default_personalimage.png" class="head-portrait" /><br />
-					<h4 id="uname">暂无昵称</h4>
-					<p id="utext" style="word-wrap: break-word;">暂无签名</p>
-				</div>
-				<!--各项-->
-				<ul class="mui-table-view mui-table-view-chevron">
-					<li class="mui-table-view-cell" position='0'>
-						<a class="mui-navigate-right" open-type="common">
-							<p><img src="../../image/mine/group-manage.png" class="mine-icon"></img> 群管理</p>
-						</a>
-					</li>
-					<li class="mui-table-view-cell" position='1'>
-						<a class="mui-navigate-right" open-type="common">
-							<p><img src="../../image/mine/data.png" class="mine-icon"></span> 人员资料</p>
-						</a>
-					</li>
-					<li class="mui-table-view-cell" position='3'>
-						<a class="" open-type="common">
-							<p><img src="../../image/mine/new-message.png" style="margin-right: 5px;" class="mine-icon"></span>新消息</p>
-							<span id="news-amount" class="mui-badge mui-badge-red">0</span>
-						</a>
-					</li>
-					<!--<li class="mui-table-view-cell" position='2'>
+			<div id="title" class="title">
+				<img id="uimg" style="height: 60px;width: 60px;" src="../../image/utils/default_personalimage.png" class="head-portrait" /><br />
+				<h4 id="uname">暂无昵称</h4>
+				<p id="utext" style="word-wrap: break-word;">暂无签名</p>
+			</div>
+			<!--各项-->
+			<ul class="mui-table-view mui-table-view-chevron">
+				<li class="mui-table-view-cell" position='0'>
+					<a class="mui-navigate-right" open-type="common">
+						<p><img src="../../image/mine/group-manage.png" class="mine-icon"></img> 群管理</p>
+					</a>
+				</li>
+				<li class="mui-table-view-cell" position='1'>
+					<a class="mui-navigate-right" open-type="common">
+						<p><img src="../../image/mine/data.png" class="mine-icon"></span> 人员资料</p>
+					</a>
+				</li>
+				<li class="mui-table-view-cell" position='3'>
+					<a class="" open-type="common">
+						<p><img src="../../image/mine/new-message.png" style="margin-right: 5px;" class="mine-icon"></span>新消息</p>
+						<span id="news-amount" class="mui-badge mui-badge-red">0</span>
+					</a>
+				</li>
+				<!--<li class="mui-table-view-cell" position='2'>
 						<a class="mui-navigate-right" open-type="common">
 							<img src='../../image/mine/apply-group.png' class="mine-icon"></img> 申请加入群
 						</a>
 					</li>-->
-					<li class="mui-table-view-divider"></li>
+				<li class="mui-table-view-divider"></li>
 
-					<li class="mui-table-view-cell" position='4'>
-						<a class="mui-navigate-right">
-							<p><img src="../../image/mine/my-space.png" class="mine-icon"></img> 我的空间</p>
-						</a>
-					</li>
-					<li id="check-news" class="mui-table-view-cell" position='8' style="display: none;">
-						<a class="mui-navigate-right">
-							<p><img src="../../image/mine/news-check.png" class="mine-icon"></img> 新闻审核</p>
-						</a>
-					</li>
-					<li class="mui-table-view-cell" position='5'>
-						<a class="mui-navigate-right">
-							<p><img src="../../image/mine/my-points.png" class="mine-icon"></img> 积分</p>
-						</a>
-					</li>
+				<li class="mui-table-view-cell" position='4'>
+					<a class="mui-navigate-right">
+						<p><img src="../../image/mine/my-space.png" class="mine-icon"></img> 我的空间</p>
+					</a>
+				</li>
+				<li id="check-news" class="mui-table-view-cell" position='8' style="display: none;">
+					<a class="mui-navigate-right">
+						<p><img src="../../image/mine/news-check.png" class="mine-icon"></img> 新闻审核</p>
+					</a>
+				</li>
+				<li class="mui-table-view-cell" position='5'>
+					<a class="mui-navigate-right">
+						<p><img src="../../image/mine/my-points.png" class="mine-icon"></img> 积分</p>
+					</a>
+				</li>
 
-					<li class="mui-table-view-divider"></li>
-					<li class="mui-table-view-cell" position='6'>
-						<a class="mui-navigate-right">
-							<p><img src="../../image/mine/setting.png" class="mine-icon"></img> 设置</p>
-						</a>
-					</li>
-					<li class="mui-table-view-cell" position='7'>
-						<a class="mui-navigate-right">
-							<p><img src="../../image/mine/about.png" class="mine-icon"></img> 关于</p>
-						</a>
-					</li>
-				</ul>
+				<li class="mui-table-view-divider"></li>
+				<li class="mui-table-view-cell" position='6'>
+					<a class="mui-navigate-right">
+						<p><img src="../../image/mine/setting.png" class="mine-icon"></img> 设置</p>
+					</a>
+				</li>
+				<li class="mui-table-view-cell" position='7'>
+					<a class="mui-navigate-right">
+						<p><img src="../../image/mine/about.png" class="mine-icon"></img> 关于</p>
+					</a>
+				</li>
+			</ul>
 			<!--</div>-->
 		</div>
 		<script src="../../js/mui.min.js"></script>
@@ -103,6 +103,9 @@
 				//				events.jumpPage(document.getElementById('title'),'mine/account-info.html');
 				//点击title跳转到账号信息界面
 				events.addTap('title', function() {
+					if(plus.os.name == 'iOS') {
+						closeMenu(); //关闭侧滑菜单
+					}
 					//打开账户信息新页面
 					events.openNewWindow('/html/mine/account-info.html')
 				})
@@ -165,6 +168,23 @@
 					if(targetWebUrl) {
 						events.singleWebviewInPeriod(this, targetWebUrl, data);
 					}
+					switch(parseInt(this.getAttribute('position'))) {
+						case 0:
+						case 1:
+						case 2:
+						case 3:
+						case 4:
+						case 6:
+						case 7:
+						case 8:
+							if(plus.os.name == 'iOS') {
+								closeMenu();
+							}
+							break;
+						default:
+							break;
+					}
+
 				});
 			})
 			//个人信息改变
