--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -178,7 +178,7 @@
 						case 7:
 						case 8:
 							if(plus.os.name == 'iOS') {
-								closeMenu();
+								setTimeout(closeMenu,250);
 							}
 							break;
 						default:
