--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -16,8 +16,8 @@
 	</head>
 
 	<body>
-		<div class="mui-content">
-			<!--<div class="mui-scroll">-->
+		<div class="mui-content mui-scroll-wrapper">
+			<div class="mui-scroll">
 			<div id="title" class="title">
 				<img id="uimg" style="height: 60px;width: 60px;" src="../../image/utils/default_personalimage.png" class="head-portrait" /><br />
 				<h4 id="uname">暂无昵称</h4>
@@ -76,7 +76,7 @@
 					</a>
 				</li>
 			</ul>
-			<!--</div>-->
+			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
@@ -88,6 +88,9 @@
 					menubutton: false //android系统按钮不可用
 				}
 			});
+			mui('.mui-scroll-wrapper').scroll({
+				 indicators: false //是否显示滚动条
+			});
 			//获得侧滑主窗口webview对象
 			var main = null;
 			var info = null;
@@ -96,7 +99,7 @@
 				main = curPage.opener();
 				//当前页面加载显示的监听
 				curPage.addEventListener("show", function(e) {
-					mui('.mui-content').scroll().scrollTo(0, 0, 100); //100毫秒滚动到顶
+					mui('.mui-scroll-wrapper').scroll().scrollTo(0, 0, 100); //100毫秒滚动到顶
 				})
 				//展示个人信息
 				getInfo();
@@ -105,11 +108,7 @@
 				events.addTap('title', function() {
 					//打开账户信息新页面
 					events.openNewWindow('/html/mine/account-info.html');
-					if(plus.os.name == 'iOS') {
-						setTimeout(closeMenu, 250);
-					} else {
-						setTimeout(closeMenu, 1000);
-					}
+					closeMenu();
 				})
 				//侧滑菜单各项点击事件
 				mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
@@ -179,11 +178,7 @@
 						case 6:
 						case 7:
 						case 8:
-							if(plus.os.name == 'iOS') {
-								setTimeout(closeMenu, 250);
-							} else {
-								setTimeout(closeMenu, 1000);
-							}
+							closeMenu();
 							break;
 						default:
 							break;
@@ -255,7 +250,9 @@
 			}
 			//关闭
 			function closeMenu() {
-				mui.fire(main, "menu:close");
+				setTimeout(function(){
+					mui.fire(main, "menu:close");
+				},500)
 			}
 			//优化显示出来的侧滑菜单，只需监听该菜单的左滑事件，然后将其关闭即可；在菜单上右滑，不做任何操作；
 			window.addEventListener("swipeleft", closeMenu);
