调整公共方法

--- a/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_main.html
+++ b/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_main.html
@@ -189,6 +189,7 @@
 		<script type="text/javascript" src="../../js/utils/events.js"></script>
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
 		<script type="text/javascript" src="../../js/utils/MultiMedia.js"></script>
+		<script type="text/javascript" src="../../js/utils/gallerypick.js" ></script>
 		<script type="text/javascript" src="../../js/mui.zoom.js"></script>
 		<script type="text/javascript" src="../../js/mui.previewimage.js"></script>
 		<script type="text/javascript" src="../../js/mui.pullToRefresh.js"></script>
