--- a/JiaoBaoYun-hb/html/cloud/record_student_add.html
+++ b/JiaoBaoYun-hb/html/cloud/record_student_add.html
@@ -68,6 +68,7 @@
 		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
 		<script type="text/javascript" src="../../js/utils/MultiMedia.js"></script>
+		<script type="text/javascript" src="../../js/utils/gallerypick.js" ></script>
 		<script type="text/javascript" src="../../js/utils/events.js"></script>
 		<script type="text/javascript" src="../../js/cloud/AndroidFileSystem.js"></script>
 		<script type="text/javascript" src="../../js/qiniu/qiniu.js"></script>
