个人空间 展现上传相册视频

--- a/JiaoBaoYun-hb/html/quan/pub-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/pub-dynamic.html
@@ -52,6 +52,7 @@
 	<script src="../../js/utils/recordvideoutil.js"></script>
 	<script src="../../js/utils/load.js"></script>
 	<script src="../../js/utils/video.js"></script>
+	<script src="../../js/utils/gallerypick.js"></script>
 	<script src="../../js/utils/CloudFileUtil.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../../js/utils/compress.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../../js/utils/cryption.js" type="text/javascript" charset="utf-8"></script>
@@ -113,9 +114,7 @@
 
 			events.addTap('take_camero', function() {
 				var item = this;
-				jQuery("#take_camero").css('pointerEvents', 'none');
-
-				item.setAttribute("disabled", "disabled");
+//				jQuery(item).css('pointerEvents', 'none');
 				console.log("item不能点击了！" + item.id);
 				if(CloudFileUtil.files.length > 0) {
 					switch(CloudFileUtil.files[0].type) {
@@ -128,55 +127,88 @@
 						default:
 							break;
 					}
-					jQuery("#take_camero").css('pointerEvents', 'all');
+//					jQuery(item).css('pointerEvents', 'all');
 					return;
 				}
-				video.recordVideo({}, function(path) {
-					events.showWaiting();
-					console.log("保存在本地的路径：" + path);
-					path = path;
-					load.getManageOptions(2, path, function(mData, thumb) {
-						console.log("视频获取的各项参数：" + JSON.stringify(mData));
-						mData.saveSpace = storageKeyName.PERSONALSPACE;
-						mData.spaceId = 6;
-						var data = CloudFileUtil.getSingleImgUploadOptions(path, mData.spaceId, mData.spaceType, mData.saveSpace, mData.options);
-						CloudFileUtil.getQNUpTokenWithManage(storageKeyName.QNGETUPLOADTOKEN, data.options, function(datas) {
-							console.log("获取的数据：" + JSON.stringify(datas));
-							if(datas.Status == 1) {
-								var tokenInfo = datas.Data;
-								//上传文件
-								CloudFileUtil.uploadFile(tokenInfo, path, function(uploadData, status) {
-									console.log("获取的上传数据：" + JSON.stringify(uploadData));
-									console.log("获取的token信息：" + JSON.stringify(tokenInfo));
-									var img = { //图片信息
-										url: tokenInfo.Domain + tokenInfo.Key,
-										thumb: tokenInfo.OtherKey[data.thumbKey],
-										clip: tokenInfo.OtherKey[data.thumbKey] + "?imageMogr2/gravity/Center/crop/!" + mData.options.thumbSize.width + "x" + mData.options.thumbSize.width * 0.45,
-										localPath: path,
-										type: 2
-									}
-									//										console.log("获取的图片信息：" + JSON.stringify(img));
-									//关闭等待框
-									plus.nativeUI.closeWaiting();
-									//放置图片
-									CloudFileUtil.setPic(img, 0, thumb);
-									jQuery("#take_camero").css('pointerEvents', 'all');
-								});
-							}
+				var btnArr = [{
+					title: "录制视频",
+					dia: 0
+				}, {
+					title: "本地视频",
+					dia: 0
+				}];
+				var funArr = [recordVideo, pickLocalVideo];
+				events.showActionSheet(btnArr,funArr);
 
-						}, function(xhr, type, errorThrown) {
-							console.log("错误类型：" + type + errorThrown);
-							plus.nativeUI.closeWaiting(); //关闭等待框
+			});
+					/**
+		 * 选择本地视频
+		 */
+		function pickLocalVideo() {
+			Gallery.pickVideo(function(e) {
+				if(e.flag === 1) {
+					uploadFile(e.path);
+				}
+			})
+		}
+		/**
+		 * 录像
+		 */
+		function recordVideo() {
+			video.recordVideo({}, function(path) {
+				events.showWaiting();
+				console.log("保存在本地的路径：" + path);
+				uploadFile(path);
+			}, function(errData) {
+				console.log(errData.code);
+				if(errData.code != 0) {
+					mui.toast(errData.message);
+				}
+				jQuery("#take_camero").css('pointerEvents', 'all');
+				console.log("item能点击了！")
+			})
+		}
+		/**
+		 * 上传文件
+		 * @param {Object} path
+		 */
+		function uploadFile(path) {
+			load.getManageOptions(2, path, function(mData, thumb) {
+				console.log("视频获取的各项参数：" + JSON.stringify(data));
+				mData.saveSpace = storageKeyName.CLASSSPACE;
+				mData.spaceId = 6;
+				var data = CloudFileUtil.getSingleImgUploadOptions(path, mData.spaceId, mData.spaceType, mData.saveSpace, mData.options);
+				CloudFileUtil.getQNUpTokenWithManage(storageKeyName.QNGETUPLOADTOKEN, data.options, function(datas) {
+					console.log("获取的数据：" + JSON.stringify(datas));
+					if(datas.Status == 1) {
+						var tokenInfo = datas.Data;
+						//上传文件
+						CloudFileUtil.uploadFile(tokenInfo, path, function(uploadData, status) {
+							console.log("获取的上传数据：" + JSON.stringify(uploadData));
+							console.log("获取的token信息：" + JSON.stringify(tokenInfo));
+							var img = { //图片信息
+								url: tokenInfo.Domain + tokenInfo.Key,
+								thumb: tokenInfo.OtherKey[data.thumbKey],
+								clip: tokenInfo.OtherKey[data.thumbKey] + "?imageMogr2/gravity/Center/crop/!" + mData.options.thumbSize.width + "x" + mData.options.thumbSize.width * 0.45,
+								localPath: path,
+								type: 2
+							}
+							//										console.log("获取的图片信息：" + JSON.stringify(img));
+							//关闭等待框
+							plus.nativeUI.closeWaiting();
+							//放置图片
+							CloudFileUtil.setPic(img, 0, thumb);
 							jQuery("#take_camero").css('pointerEvents', 'all');
 						});
-					})
-				}, function(errData) {
-					console.log(errData.code);
+					}
+
+				}, function(xhr, type, errorThrown) {
+					console.log("错误类型：" + type + errorThrown);
 					plus.nativeUI.closeWaiting(); //关闭等待框
-					mui.toast(errData.message);
 					jQuery("#take_camero").css('pointerEvents', 'all');
-				})
-			});
+				});
+			})
+		}
 			events.addTap('get_gallery', function() {
 				if(CloudFileUtil.files.length > 0 && CloudFileUtil.files[0].type != 1) {
 					mui.toast("只允许上传一种附件！");
